Everything now in NMS modules. BUILD SUCCESS

--- a/Plugin/pom.xml
+++ b/Plugin/pom.xml
@@ -30,6 +30,11 @@
         </dependency>
         <dependency>
             <groupId>mc.replay.nms</groupId>
+            <artifactId>NMS-Common</artifactId>
+            <version>Dev-1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>mc.replay.nms</groupId>
             <artifactId>v1_16_5</artifactId>
             <version>Dev-1.0</version>
         </dependency>
