--- a/NMS/NMS-Common/pom.xml
+++ b/NMS/NMS-Common/pom.xml
@@ -20,5 +20,12 @@
             <version>Dev-1.0</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>mc.replay</groupId>
+            <artifactId>Common</artifactId>
+            <version>Dev-1.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
