--- a/NMS/v1_18_2/pom.xml
+++ b/NMS/v1_18_2/pom.xml
@@ -22,6 +22,13 @@
         </dependency>
 
         <dependency>
+            <groupId>mc.replay</groupId>
+            <artifactId>Common</artifactId>
+            <version>Dev-1.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot</artifactId>
             <version>1.18.2-R0.1-SNAPSHOT</version>
