--- a/NMS/pom.xml
+++ b/NMS/pom.xml
@@ -6,8 +6,8 @@
     <packaging>pom</packaging>
     <modules>
         <module>NMS-Common</module>
-        <module>v1_16_5</module>
-        <module>v1_18_2</module>
+        <module>v1_16_R3</module>
+        <module>v1_18_R2</module>
     </modules>
 
     <parent>
