--- a/NMS/v1_16_R3/pom.xml
+++ b/NMS/v1_16_R3/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <groupId>mc.replay.nms</groupId>
-    <artifactId>v1_18_2</artifactId>
+    <artifactId>v1_16_R3</artifactId>
 
     <dependencies>
         <dependency>
@@ -25,13 +25,6 @@
             <groupId>mc.replay</groupId>
             <artifactId>Common</artifactId>
             <version>Dev-1.0</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.spigotmc</groupId>
-            <artifactId>spigot</artifactId>
-            <version>1.18.2-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
