--- a/API/pom.xml
+++ b/API/pom.xml
@@ -17,5 +17,10 @@
             <artifactId>packetlib</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>mc.replay</groupId>
+            <artifactId>minecraftobjectwrapper</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
