--- a/api/pom.xml
+++ b/api/pom.xml
@@ -15,12 +15,12 @@
         <dependency>
             <groupId>com.github.MC-Replay</groupId>
             <artifactId>PacketLib</artifactId>
-            <version>88575f1fce</version>
+            <version>main-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.github.MC-Replay</groupId>
             <artifactId>Minecraft-Object-Wrapper</artifactId>
-            <version>16375a9dbf</version>
+            <version>main-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <groupId>mc.replay</groupId>
