Changed jar file names

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -29,4 +29,8 @@
             </exclusions>
         </dependency>
     </dependencies>
+
+    <build>
+        <finalName>MCReplay-API-${project.version}</finalName>
+    </build>
 </project>
