--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -29,4 +29,8 @@
             <version>Dev-1.0</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <finalName>MCReplay-${project.version}</finalName>
+    </build>
 </project>
