--- a/recording/pom.xml
+++ b/recording/pom.xml
@@ -20,4 +20,8 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <finalName>MCReplay-Recording-${project.version}</finalName>
+    </build>
 </project>
