--- a/api/pom.xml
+++ b/api/pom.xml
@@ -20,7 +20,10 @@
         <dependency>
             <groupId>com.github.MC-Replay</groupId>
             <artifactId>Minecraft-Object-Wrapper</artifactId>
-            <version>356d41a16a</version>
+            <version>94ce847a78</version>
+<!--            <groupId>mc.replay</groupId>-->
+<!--            <artifactId>minecraftobjectwrapper</artifactId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
             <exclusions>
                 <exclusion>
                     <groupId>mc.replay</groupId>
