--- a/plugin/src/main/resources/messages.yml
+++ b/plugin/src/main/resources/messages.yml
@@ -2,7 +2,7 @@ messages:
   replay:
     started: "%prefix% &aReplay session started."
     stopped: "%prefix% &aReplay session stopped."
-    auction-bar:
+    action-bar:
       status:
         paused: "&cPaused"
         playing: "&aPlaying"
