Updated packetlib and object wrapper, added OdalitaMenus as menu dependency and made start with player info menu for players in the replay

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -24,6 +24,12 @@
             <artifactId>class-generator</artifactId>
             <version>Dev-1.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.odalita-developments.odalitamenus</groupId>
+            <artifactId>core</artifactId>
+            <version>v0.1.6</version>
+        </dependency>
     </dependencies>
 
     <build>
