--- a/nms/nms-common/pom.xml
+++ b/nms/nms-common/pom.xml
@@ -5,11 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>mc.replay</groupId>
-        <artifactId>MCReplay</artifactId>
+        <artifactId>nms</artifactId>
         <version>Dev-1.0</version>
     </parent>
 
-    <artifactId>class-generator</artifactId>
+    <groupId>mc.replay.nms</groupId>
+    <artifactId>nms-common</artifactId>
 
     <dependencies>
         <dependency>
@@ -18,15 +19,5 @@
             <version>Dev-1.0</version>
             <scope>provided</scope>
         </dependency>
-
-        <dependency>
-            <groupId>org.javassist</groupId>
-            <artifactId>javassist</artifactId>
-            <version>3.29.2-GA</version>
-        </dependency>
     </dependencies>
-
-    <build>
-        <finalName>MCReplay-ClassGenerator-${project.version}</finalName>
-    </build>
 </project>
