Added nms modules for 1.17.1, 1.18.2 and 1.20.1

--- a/nms/pom.xml
+++ b/nms/pom.xml
@@ -15,6 +15,9 @@
     <modules>
         <module>nms-common</module>
         <module>v1_16_R3</module>
+        <module>v1_17_R1</module>
+        <module>v1_18_R2</module>
         <module>v1_19_R3</module>
+        <module>v1_20_R1</module>
     </modules>
 </project>
