--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -36,7 +36,22 @@
         </dependency>
         <dependency>
             <groupId>mc.replay.nms</groupId>
+            <artifactId>v1_17_R1</artifactId>
+            <version>Dev-1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>mc.replay.nms</groupId>
+            <artifactId>v1_18_R2</artifactId>
+            <version>Dev-1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>mc.replay.nms</groupId>
             <artifactId>v1_19_R3</artifactId>
+            <version>Dev-1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>mc.replay.nms</groupId>
+            <artifactId>v1_20_R1</artifactId>
             <version>Dev-1.0</version>
         </dependency>
     </dependencies>
