--- a/common/pom.xml
+++ b/common/pom.xml
@@ -20,6 +20,12 @@
         </dependency>
 
         <dependency>
+            <groupId>mc.replay</groupId>
+            <artifactId>mappings</artifactId>
+            <version>Dev-1.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>mc.replay.nms</groupId>
             <artifactId>nms-common</artifactId>
             <version>Dev-1.0</version>
